# finka

./: .dockerignore  .env.example  .gitignore  Dockerfile  ONBOARDING.md  README.md  bun.lockb  dev.sh  docker-compose.yml  package.json  start-database.sh  tailwind.config.ts
api/: config.py  database.py  main.py  pyproject.toml
api/alembic/: env.py
api/integrations/: coinbase.py  monzo.py  registry.py  trading212.py
api/models/: __init__.py  account.py  category.py  connection.py  goal.py  net_worth_snapshot.py  transaction.py  user.py
api/query_selectors/: account_selector.py  transaction_selector.py  user_selector.py
api/routers/: accounts.py  categories.py  connections.py  export.py  goals.py  net_worth.py  trading212.py  transactions.py
api/schemas/: account.py  connection.py  goal.py  transaction.py
api/scripts/: coinbase_smoke.py  monzo_auth.py  monzo_smoke.py  reset.py  seed.py  seed_connections.py  snapshot.py  t212_smoke.py
api/services/: account_service.py  auth.py  connection_service.py  export_service.py  goal_service.py  net_worth_service.py  projection_service.py  scheduler.py  transaction_service.py
api/tests/: conftest.py  test_connection_service_helpers.py  test_export_csv_helpers.py  test_goal_service_helpers.py  test_goals_api.py  test_http_connector.py  test_monzo_client.py  test_net_worth_split.py  test_projection_goals_api.py  test_projection_service.py  test_provider_contract.py  test_registry.py  test_trading212_client.py  test_transaction_selector.py  test_transaction_service.py  test_transactions_router.py
src/app/: layout.tsx  (+1 more)
(+79 files in other folders)
